== EDGE
 * Accept absolute URL in request
 * Do not stop EventMachine reactor loop unless it was started by Thin.
 * Pipelining is no longer supported

== 1.5.1 Straight Razor
 * Fix issue when running as another user/group without a PID file.
 * Allow overriding Connection & Server response headers.
 * Update vlad example [Mathieu Lemoine]
 * Keep connections in a Hash to speedup deletion [slivu]
 * Force kill using already known pid. Prevents "thin stop" from leaving a process that removed its
   pid file, but is still running (e.g. hung on some at_exit callback) [Michal Kwiatkowski]

== 1.5.0 Knife
 * Fix compilation under Ubuntu 12.04 with -Werror=format-security option.
 * Raise an error when no PID file.
 * Prevent duplicate response headers.
 * Make proper response on exception [MasterLambaster].
 * Automatically close idling pipeline connections on server stop [MasterLambaster].

== 1.4.1 Chromeo Fix
 * Fix error when sending USR1 signal and no log file is supplied.

== 1.4.0 Chromeo
 * kill -USR1 $PID for log rotation [catwell].
 * Fix HUP signal being reseted after deamonization [atotic].
 * Fix error with nil addresses in Connection#socket_address.

== 1.3.2 Low-bar Squat
 * Remove mack and halcyon Rack adapters from automatic detection.

== 1.3.1 Triple Espresso
 * Fix service not working pre 1.9.

== 1.3.0 Double Espresso
 * BREAKING CHANGE: Thin no longer ships with fat Windows binaries.
   From now on, to install on Windows, install https://github.com/oneclick/rubyinstaller/wiki/Development-Kit.
 * BREAKING CHANGE: Remove automatic Content-Length setting.
   It is now the responsibility of the app (or a middleware) to set the Content-Length.
 * Log errors to STDERR [textgoeshere]
 * Shut down gracefully when receiving SIGTERM [ddollar]
     
     Processes are allowed a chance to shut down gracefully when receiving
     SIGTERM (http://en.wikipedia.org/wiki/SIGTERM).
     
     On Heroku, when shutting down a process, we send a SIGTERM followed 10