@@ -10,6 +10,8 @@ module Thin
     # This is a template async response. N.B. Can't use string for body on 1.9
     AsyncResponse = [-1, {}, []].freeze
 
+    EMPTY_BODY = [].freeze
+
     # Rack application (adapter) served by this connection.
     attr_accessor :app
 
@@ -97,6 +99,9 @@ module Thin
       @response.status, @response.headers, @response.body = *result
 
       log "!! Rack application returned nil body. Probably you wanted it to be an empty string?" if @response.body.nil?
+
+      # HEAD requests should not return a body.
+      @response.body = EMPTY_BODY if @request.head?
 
       # Make the response persistent if requested by the client
       @response.persistent! if @request.persistent?
